[package]
name = "pan_text"
version = "0.1.0"
edition = "2021"
license = "UNLICENSE"
authors = [ "museun <museun@users.noreply.github.com>" ]
repository = "https://github.com/museun/pan_text"
description = "ever want to pan some text in your terminal?"

[dependencies]
too = { version = "0.1.0", git = "https://github.com/museun/too", rev = "cbad23fb1b5085e7a3131690fa268eebeb2602b5" }
too_crossterm = { version = "0.1.0", git = "https://github.com/museun/too", rev = "cbad23fb1b5085e7a3131690fa268eebeb2602b5" }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
